Refact : 수정 프론트와의 연결 원할하게 수정