@@ -3,10 +3,13 @@ package com.sparta.devstar_be.hub.service;
 import com.sparta.devstar_be.board.dto.BoardResponseDto;
 import com.sparta.devstar_be.board.entity.Board;
 import com.sparta.devstar_be.board.repository.BoardRepository;
-import com.sparta.devstar_be.hub.dto.HubResponseDto;
+import com.sparta.devstar_be.share.Share;
+import com.sparta.devstar_be.share.ShareResponseDto;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class HubService {
@@ -17,7 +20,15 @@ public class HubService {
         this.boardRepository = boardRepository;
     }
 
-    public List<HubResponseDto> gethub() {
-        return boardRepository.findAll().stream().map(HubResponseDto::new).toList();
+    public List<BoardResponseDto> getAllBaord() {
+        List<Board> boardList = boardRepository.findAll();
+        if (boardList.isEmpty()) {
+            // 빈 리스트 반환 (null값으로 반환하지 않도록)
+            return Collections.emptyList();
+        }
+
+        return boardList.stream()
+                .map(BoardResponseDto::new)
+                .collect(Collectors.toList());
     }
 }
